Modify the main section for the correct alignment of the elements

--- a/styles.css
+++ b/styles.css
@@ -198,13 +198,17 @@ footer {
         width: 50rem;
         grid-area: description;
         display: flex;
+        align-items: start;
+        justify-content: flex-end;
+        padding: 0 2rem;
+        gap: 4rem;
     }
     .main__title {
         font-size: 4.6rem;
     }
     .main__text {
         width: 80%;
-        text-align: justify;
+        text-align: left;
     }
 
     .main-image {
@@ -217,7 +221,7 @@ footer {
         background-size: contain;
     }
 
-    /* FOOTER SECTION */
-
-    
+    footer {
+        margin-top: 5rem;
+    }
 }
